@@ -47,117 +47,134 @@ public class CGM4SVG extends CGM {
 	@Override
 	public void paint(CGMDisplay d) {
 		for (Command c : getCommands()) {
+			if (c == null) {
+				continue;
+			}
+			
 			BeginApplicationStructure currentAPS;
-			if (c instanceof ApplicationStructureAttribute asa) {
-				
-				BeginApplicationStructure top = this.basStack.peek();
-				
-				this.mapping.get(top).addAPS(asa);
-				
-				ApplicationStructureAttribute regionaps = this.mapping.get(top).getRegionAPS();
-				if (regionaps != null) {
-					this.painter.paint(regionaps, d, this.mapping.get(top), getSize());
-				} else {
-					ApplicationStructureAttribute vcaps = this.mapping.get(top).getVCAPS();
-					if (vcaps != null) {
-						this.painter.paint(vcaps, d, this.mapping.get(top), getSize());
-					}
-				}
-			} else if (c instanceof BeginApplicationStructure bas) {
-				currentAPS = bas;
-				this.basStack.add(currentAPS);
-				PaintHolder ph = new PaintHolder();
-				ph.setApsid(currentAPS.getIdentifier());
-				this.mapping.put(currentAPS, ph);
-				
-			} else if (c instanceof BeginFigure bf) {
-				c.paint(d);
-				this.currentFigure = bf;
-				this.figurePolyBezier.put(this.currentFigure, new ArrayList<>());
-			} else if (c instanceof EndApplicationStructure) {
-				this.basStack.pop();
-				if (!this.basStack.empty()) {
-					this.basStack.peek();
-				}
-			} else if (c instanceof EndFigure) {
-				List<PolyBezierV2> toPaint = this.figurePolyBezier.get(this.currentFigure);
-				
-				if (!toPaint.isEmpty()) {
-					PolyBezierV2 c2 = mergePB(toPaint);
+			switch (c) {
+				case ApplicationStructureAttribute asa -> {
 					
-					if (!this.basStack.isEmpty()) {
-						BeginApplicationStructure top = this.basStack.peek();
-						
-						c2.paint(d, this.currentFigure,
-								this.mapping.get(top).getCurrentFC(),
-								this.mapping.get(top).getCurrentEC(),
-								this.mapping.get(top).getCurrentEW());
-						
+					BeginApplicationStructure top = this.basStack.peek();
+					
+					this.mapping.get(top).addAPS(asa);
+					
+					ApplicationStructureAttribute regionaps = this.mapping.get(top).getRegionAPS();
+					if (regionaps != null) {
+						this.painter.paint(regionaps, d, this.mapping.get(top), getSize());
 					} else {
-						c2.paint(d, this.currentFigure);
-						
+						ApplicationStructureAttribute vcaps = this.mapping.get(top).getVCAPS();
+						if (vcaps != null) {
+							this.painter.paint(vcaps, d, this.mapping.get(top), getSize());
+						}
 					}
 				}
-				this.currentFigure = null;
-			} else {
-				if (c instanceof PolyBezier pb) {
-					PolyBezierV2 c2 = new PolyBezierV2(pb);
-					if (!this.basStack.isEmpty()) {
-						BeginApplicationStructure top = this.basStack.peek();
-						if (this.currentFigure == null) {
-							c2.paint(d, null,
+				case BeginApplicationStructure bas -> {
+					currentAPS = bas;
+					this.basStack.add(currentAPS);
+					PaintHolder ph = new PaintHolder();
+					ph.setApsid(currentAPS.getIdentifier());
+					this.mapping.put(currentAPS, ph);
+				}
+				case BeginFigure bf -> {
+					c.paint(d);
+					this.currentFigure = bf;
+					this.figurePolyBezier.put(this.currentFigure, new ArrayList<>());
+				}
+				case EndApplicationStructure ignored1 -> {
+					this.basStack.pop();
+					if (!this.basStack.empty()) {
+						this.basStack.peek();
+					}
+				}
+				case EndFigure ignored2 -> {
+					List<PolyBezierV2> toPaint = this.figurePolyBezier.get(this.currentFigure);
+					
+					if (!toPaint.isEmpty()) {
+						PolyBezierV2 c2 = mergePB(toPaint);
+						
+						if (!this.basStack.isEmpty()) {
+							BeginApplicationStructure top = this.basStack.peek();
+							
+							c2.paint(d, this.currentFigure,
 									this.mapping.get(top).getCurrentFC(),
 									this.mapping.get(top).getCurrentEC(),
 									this.mapping.get(top).getCurrentEW());
+							
 						} else {
-							this.figurePolyBezier.get(this.currentFigure).add(c2); // all polybezier will be merged into a single shape
-						}
-					} else {
-						if (this.currentFigure == null) {
-							c2.paint(d, null);
-						} else {
-							this.figurePolyBezier.get(this.currentFigure).add(c2);
+							c2.paint(d, this.currentFigure);
+							
 						}
 					}
-				} else if (c instanceof FillColour fc) {
-					if (!this.basStack.isEmpty()) {
-						BeginApplicationStructure top = this.basStack.peek();
-						this.mapping.get(top).setCurrentFC(fc);
+					this.currentFigure = null;
+				}
+				// all polybezier will be merged into a single shape
+				default -> {
+					switch (c) {
+						case PolyBezier pb -> {
+							PolyBezierV2 c2 = new PolyBezierV2(pb);
+							if (!this.basStack.isEmpty()) {
+								BeginApplicationStructure top = this.basStack.peek();
+								if (this.currentFigure == null) {
+									c2.paint(d, null,
+											this.mapping.get(top).getCurrentFC(),
+											this.mapping.get(top).getCurrentEC(),
+											this.mapping.get(top).getCurrentEW());
+								} else {
+									this.figurePolyBezier.get(this.currentFigure).add(c2); // all polybezier will be merged into a single shape
+								}
+							} else {
+								if (this.currentFigure == null) {
+									c2.paint(d, null);
+								} else {
+									this.figurePolyBezier.get(this.currentFigure).add(c2);
+								}
+							}
+						}
+						case FillColour fc -> {
+							if (!this.basStack.isEmpty()) {
+								BeginApplicationStructure top = this.basStack.peek();
+								this.mapping.get(top).setCurrentFC(fc);
+							}
+							c.paint(d);
+						}
+						case EdgeColour ec -> {
+							if (!this.basStack.isEmpty()) {
+								BeginApplicationStructure top = this.basStack.peek();
+								this.mapping.get(top).setCurrentEC(ec);
+							}
+							c.paint(d);
+						}
+						case EdgeWidth ew -> {
+							if (!this.basStack.isEmpty()) {
+								BeginApplicationStructure top = this.basStack.peek();
+								this.mapping.get(top).setCurrentEW(ew);
+							}
+							c.paint(d);
+						}
+						case LineColour lc -> {
+							if (!this.basStack.isEmpty()) {
+								BeginApplicationStructure top = this.basStack.peek();
+								this.mapping.get(top).setCurrentLC(lc);
+							}
+							c.paint(d);
+						}
+						case LineWidth lw -> {
+							if (!this.basStack.isEmpty()) {
+								BeginApplicationStructure top = this.basStack.peek();
+								this.mapping.get(top).setCurrentLW(lw);
+							}
+							c.paint(d);
+						}
+						default -> c.paint(d);
 					}
-					c.paint(d);
-				} else if (c instanceof EdgeColour ec) {
-					if (!this.basStack.isEmpty()) {
-						BeginApplicationStructure top = this.basStack.peek();
-						this.mapping.get(top).setCurrentEC(ec);
-					}
-					c.paint(d);
-				} else if (c instanceof EdgeWidth ew) {
-					if (!this.basStack.isEmpty()) {
-						BeginApplicationStructure top = this.basStack.peek();
-						this.mapping.get(top).setCurrentEW(ew);
-					}
-					c.paint(d);
-				} else if (c instanceof LineColour lc) {
-					if (!this.basStack.isEmpty()) {
-						BeginApplicationStructure top = this.basStack.peek();
-						this.mapping.get(top).setCurrentLC(lc);
-					}
-					c.paint(d);
-				} else if (c instanceof LineWidth lw) {
-					if (!this.basStack.isEmpty()) {
-						BeginApplicationStructure top = this.basStack.peek();
-						this.mapping.get(top).setCurrentLW(lw);
-					}
-					c.paint(d);
-				} else {
-					c.paint(d);
 				}
 			}
 		}
 	}
 	
 	private PolyBezierV2 mergePB(List<PolyBezierV2> tomerge) {
-		PolyBezierV2 ret = tomerge.get(0);
+		PolyBezierV2 ret = tomerge.getFirst();
 		if (tomerge.size() == 1) {
 			return ret;
 		}
